--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "mkdirp ./db && mongod --dbpath=./db --port 27017 &",
+    "prestart": "bash ./scripts/start-db.sh &",
     "start": "nodemon server.js"
   },
   "config": {
