--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "jc-service-registry",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A service registry server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "bash ./scripts/start-db.sh &",
-    "start": "nodemon server.js"
+    "start": "./scripts/start-server.sh"
   },
   "bin": {
     "registry": "./scripts/start-server.sh"
