--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jc-service-registry",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A service registry server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./scripts/start-server.sh"
+    "start": "bash ./scripts/start-server.sh"
   },
   "bin": {
     "registry": "./scripts/start-server.sh"
