--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/JorisCoppieters/service-registry#readme",
   "dependencies": {
-    "nodemon": "^1.14.3",
-    "express": "^4.16.2",
-    "mongoose": "^4.13.7"
+    "express": "^4.16.4",
+    "mongoose": "^4.13.17",
+    "nodemon": "^1.18.4"
   }
 }
